# backend

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  README.md  Readme.md  admin.py  cal.py  config.py  config.yml  db.py  docker-compose.yml  example.config.yaml  example.env  handlers.py  main.py  package-lock.json  package.json  pyproject.toml  start-docker.js  states.py  tsoa.json  utils.py
.github/workflows/: build.yml
API/routers/: admin.py  jobseeker.py  support.py  vacancy.py
Telegram/: admin.py  handlers.py
backend/: config.py  db.py  utils.py
backend/API/routers/: admin.py  jobseeker.py  support.py  vacancy.py
backend/Telegram/: admin.py  handlers.py  kb.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
prisma/: schema.prisma  seed.ts
prisma/migrations/20260520000000_companion_domain/: migration.sql
prisma/migrations/20260520172123_sponsor_catalog_and_suggestions/: migration.sql
prisma/migrations/20260524184210_test/: migration.sql
prisma/migrations/20260524220000_mock_ai_service_contract/: migration.sql
prisma/migrations/20260525000000_user_chat_remove_couple_link/: migration.sql
scripts/: mock-ai-server.mjs
src/: app.ts  server.ts
src/config/: env.ts  logger.ts
src/domain/aiService/: aiService.service.ts
src/domain/assistant/: assistant.service.ts
src/domain/auth/: auth.service.ts  permissions.ts
src/domain/chat/: chat.gateway.ts  chat.service.ts
src/domain/companion/: companion.service.ts
src/domain/sponsors/: sponsor.service.ts
src/lib/: mongo.ts
(+29 files in other folders)
